Adding get user roles endpoint
