# backend/swagger.yml
@@ -140,6 +140,20 @@ paths:
                 type: array
 
 
+  /users/roles/all:
+    get:
+      operationId: endpoint_entry.get_all_user_roles
+      description: Return all sys_user_roles in the database
+      responses:
+        200:
+          description: List of all sys_user_roles
+          schema:
+            type: object
+            properties:
+              data:
+                type: array
+
+
   /create/user:
     post:
       operationId: endpoint_entry.user_create
